src/test/ui/issues/issue-63983.stderr
error[E0532]: expected unit struct, unit variant or constant, found tuple variant `MyEnum::Tuple`
  --> $DIR/issue-63983.rs:8:9
   |
LL |         MyEnum::Tuple => "",
   |         ^^^^^^^^^^^^^ not a unit struct, unit variant or constant

error[E0532]: expected unit struct, unit variant or constant, found struct variant `MyEnum::Struct`
  --> $DIR/issue-63983.rs:10:9
   |
LL |         MyEnum::Struct => "",
   |         ^^^^^^^^^^^^^^ not a unit struct, unit variant or constant

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0532`.
